--- a/ansible/roles/linux/templates/traffic.csv.j2
+++ b/ansible/roles/linux/templates/traffic.csv.j2
@@ -1,44 +1,44 @@
 src,dst,port
-fin-dev-web01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-dev-app01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-fin-dev-app01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-dev-db01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-fin-dev-app01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-prd-db02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-fin-prd-web01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-prd-app01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-fin-prd-web01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-prd-app02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-fin-prd-web01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-prd-app03{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-fin-prd-web02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-prd-app01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-fin-prd-web02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-prd-app02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-fin-prd-web02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-prd-app03{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-fin-prd-web03{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-prd-app01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-fin-prd-web03{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-prd-app02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-fin-prd-web03{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-prd-app03{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-fin-prd-app01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-prd-db01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-fin-prd-app01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-prd-db02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-fin-prd-app02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-prd-db01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-fin-prd-app02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-prd-db02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-fin-prd-app03{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-prd-db01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-fin-prd-app03{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-prd-db02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-fin-prd-app01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},rdsdb01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-fin-prd-app02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},rdsdb01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-fin-prd-app03{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},rdsdb01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-fin-prd-db01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-prd-db02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-fin-prd-db02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},fin-prd-db01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-hrm-dev-web01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-dev-app01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-hrm-dev-app01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-dev-db01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-hrm-dev-app01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-prd-db02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-hrm-prd-web01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-prd-app01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-hrm-prd-web01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-prd-app02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-hrm-prd-web01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-prd-app03{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-hrm-prd-web02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-prd-app01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-hrm-prd-web02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-prd-app02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-hrm-prd-web02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-prd-app03{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-hrm-prd-web03{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-prd-app01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-hrm-prd-web03{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-prd-app02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-hrm-prd-web03{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-prd-app03{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},8080
-hrm-prd-app01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-prd-db01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-hrm-prd-app01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-prd-db02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-hrm-prd-app02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-prd-db01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-hrm-prd-app02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-prd-db02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-hrm-prd-app03{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-prd-db01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-hrm-prd-app03{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-prd-db02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-hrm-prd-db01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-prd-db02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
-hrm-prd-db02{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},hrm-prd-db01{{ aws_data.dnsSuffix }}.{{ aws_data.dnsZone }},3306
+fin-dev-web01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-dev-app01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+fin-dev-app01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-dev-db01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+fin-dev-app01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-prd-db02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+fin-prd-web01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-prd-app01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+fin-prd-web01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-prd-app02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+fin-prd-web01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-prd-app03.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+fin-prd-web02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-prd-app01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+fin-prd-web02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-prd-app02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+fin-prd-web02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-prd-app03.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+fin-prd-web03.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-prd-app01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+fin-prd-web03.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-prd-app02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+fin-prd-web03.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-prd-app03.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+fin-prd-app01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-prd-db01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+fin-prd-app01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-prd-db02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+fin-prd-app02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-prd-db01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+fin-prd-app02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-prd-db02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+fin-prd-app03.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-prd-db01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+fin-prd-app03.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-prd-db02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+fin-prd-app01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},rdsdb01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+fin-prd-app02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},rdsdb01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+fin-prd-app03.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},rdsdb01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+fin-prd-db01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-prd-db02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+fin-prd-db02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},fin-prd-db01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+hrm-dev-web01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-dev-app01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+hrm-dev-app01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-dev-db01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+hrm-dev-app01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-prd-db02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+hrm-prd-web01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-prd-app01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+hrm-prd-web01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-prd-app02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+hrm-prd-web01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-prd-app03.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+hrm-prd-web02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-prd-app01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+hrm-prd-web02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-prd-app02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+hrm-prd-web02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-prd-app03.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+hrm-prd-web03.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-prd-app01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+hrm-prd-web03.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-prd-app02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+hrm-prd-web03.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-prd-app03.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},8080
+hrm-prd-app01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-prd-db01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+hrm-prd-app01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-prd-db02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+hrm-prd-app02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-prd-db01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+hrm-prd-app02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-prd-db02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+hrm-prd-app03.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-prd-db01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+hrm-prd-app03.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-prd-db02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+hrm-prd-db01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-prd-db02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
+hrm-prd-db02.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},hrm-prd-db01.{{ aws_data.dnsSubDomain }}{{ aws_data.dnsZone }},3306
